added rickroll changed title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>titleee</title>
+    <title>i can change the title just so u no</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +26,7 @@
     (im never gonna fix it) </p>
 
 <div>
-    <button type="button"><span></span> rickroll?</button>
+    <button type="button"><span></span> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Rickroll?</a>  </button>
     <button type="button"><span></span>for sure</button>
     <button type="button"><span></span> did it work?</button>
     <button type="button"><span></span> mustve worked</button>
