--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>i can change the title just so u no</title>
+    <title>Profesionan no typo title</title>
+    <link rel="icon" type="image" href="img/favicon.png">
     <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <div class="banner">
@@ -20,10 +22,8 @@
             </ul>
         </div>
 <div class="content">
-    <h1>i got this dumb mgi logo <br> from when i was working on uni presentation
-    <br>dont judge</h1>
-    <p>a new patch is coming to fix that <br>in near future
-    (im never gonna fix it) </p>
+    <h1> Under Construction</h1>
+    <p> Lorem ipsum whateverthe fuck</p>
 
 <div>
     <button type="button"><span></span> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Rickroll?</a>  </button>
